--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,18 @@
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
     %sveltekit.head%
+    <meta
+      name="description"
+      content="Software engineer and engineering director, composer, filmmaker, and former Buddhist chaplain."
+    />
+    <meta
+      property="og:image"
+      content="https://jaschaephraim.com/jascha-ephraim.jpg"
+    />
+    <meta
+      property="og:description"
+      content="Software engineer and engineering director, composer, filmmaker, and former Buddhist chaplain."
+    />
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
