update og image

--- a/src/app.html
+++ b/src/app.html
@@ -14,7 +14,7 @@
     />
     <meta
       property="og:image"
-      content="https://jaschaephraim.com/jascha-ephraim.jpg"
+      content="https://jaschaephraim.com/jascha-ephraim-og.png"
     />
     <meta
       property="og:description"
